# openai4rs

./: .gitignore  Cargo.toml  README.md  README_en.md
.github/workflows/: ci.yml
assets/: chat_completion_tool_param.json  chatcompletion.json  chatcompletionchunk.json  function_definition.json
docs/: index.html  index_en.html
examples/: 01_simple_chat.rs  02_streaming_chat.rs  03_multi_turn_chat.rs  04_tool_use.rs  05_client_configuration.rs  06_vision.rs  07_thinking_model.rs  08_embeddings_example.rs  08_interceptor_example.rs  09_module_interceptor_example.rs  10_embeddings_example.rs  chat.rs  chat_reasoning_stream.rs  chat_stream.rs  client_proxy.rs  custom_config.rs  http_config.rs  request_config.rs  t.rs  tool.rs
openai4rs-macro/: Cargo.toml
openai4rs-macro/src/: lib.rs  parser.rs  utils.rs
openai4rs-macro/src/macros/: assistant.rs  content.rs  mod.rs  system.rs  tool.rs  user.rs
src/: interceptor.rs  lib.rs
src/chat/: core.rs  deserialize_impls.rs  mod.rs  params.rs  serialize_impls.rs  tool_parameters.rs  types.rs  types_impls.rs
src/client/: base.rs  core.rs  http.rs  mod.rs
src/common/: mod.rs  types.rs
src/completions/: core.rs  deserialize_impls.rs  mod.rs  params.rs  types.rs  types_impls.rs
src/config/: base.rs  client.rs  http.rs  mod.rs
src/docs/: chat.md  chat_param.md  completions.md  completions_param.md  embeddings.md  embeddings_param.md  from_env.md  models.md  openai.md
src/error/: api.rs  from.rs  mod.rs  openai.rs  processing.rs  request.rs  sse.rs
src/http/: config.rs  service.rs
src/macros/: message.rs
src/models/: core.rs  mod.rs  params.rs  types.rs
src/modules/: mod.rs
src/modules/chat/: handler.rs  mod.rs  params.rs  tool_parameters.rs  types.rs
src/modules/completions/: handler.rs  mod.rs  params.rs  types.rs
src/modules/embeddings/: handler.rs  mod.rs  params.rs  types.rs
src/modules/models/: handler.rs  mod.rs  params.rs  types.rs
src/service/: client.rs  config.rs  executor.rs  innerhttp.rs  mod.rs  request.rs  transport.rs
src/utils/: methods.rs  mod.rs  request.rs  traits.rs
tests/: api.rs  api_integration_tests.rs  config.rs  mod.rs  serialization.rs
tests/client/: client_tests.rs
tests/integration/: api_integration_tests.rs  mod.rs
tests/unit/client/: client_tests.rs  mod.rs
tests/unit/config/: config_tests.rs
