[package]
name = "openai4rs"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/zhangzhenxiang666/openai4rs"
authors = ["Zhang Zhenxiang <zhangzhenxiang@example.com>"]
description = "A non-official Rust crate for calling the OpenAI service"
license = "Apache-2.0"
keywords = ["ai", "openai", "machine-learning", "library"]

[dependencies]
derive_builder = "0.20.2"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
reqwest-eventsource = "0.6"
tokio-stream = "0.1.17"
async-trait = "0.1.88"

[dev-dependencies]
dotenvy = "0.15.7"
