[workspace]
members = [".", "openai4rs-macro"]

[package]
name = "openai4rs"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/zhangzhenxiang666/openai4rs"
documentation = "https://docs.rs/openai4rs"
authors = ["Zhang Zhenxiang 401303740@qq.com"]
description = "A non-official Rust crate for calling the OpenAI service"
license = "Apache-2.0"
keywords = ["ai", "openai", "machine-learning", "library"]
exclude = [".vscode/", "docs/", ".git/", ".github/", "*.log", ".env*"]
categories = ["api-bindings", "asynchronous", "science"]

[dependencies]
derive_builder = "0.20.2"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
eventsource-stream = "0.2.3"
tokio-stream = "0.1.17"
async-trait = "0.1.88"
openai4rs-macro = { path = "./openai4rs-macro", version = "0.1.0" }
rand = "0.8"

[dev-dependencies]
dotenvy = "0.15.7"
